# xfce4-desktop-branding

./: Makefile  README.md  meson.build  mimeapps.list  mkrelease.sh  xfce-mimeapps.list
lightdm/: 10_xfce.conf  30_xfce.conf  meson.build  xfce_config.conf
overrides/: default.xml  meson.build  thunar-volman.xml  thunar.xml  xfce4-appfinder.xml  xfce4-desktop.xml  xfce4-notifyd.xml  xfce4-panel.xml  xfwm4.xml  xsettings.xml
overrides/livecd/: xfce4-panel.xml
schemas/: meson.build  x.dm.slick-greeter.override
